<resources>
    <string name="text_version">V. 1.7</string>
    <string name="ApplicationName">AppSofom</string>
    <string name="text_configurar"><u>Configurar</u></string>
    <string name="text_caja"><u>Corte de Caja</u></string>
    <string name="text_prestamo"><u>Cobrar Prestamo</u></string>
    <string name="HistPag_Operador">Operador</string>
    <string name="HistPag_Fecha">Fecha</string>
    <string name="HistPag_TotalPago">Pago</string>
    <string name="HistDet_NumPago">#</string>
    <string name="HistDet_FechaVenc">Vence</string>
    <string name="HistDet_PagoLetra">Letra</string>
    <string name="HistDet_SaldoLetra">Saldo</string>
    <string name="app_name">Navigation Drawer</string>
    <string name="strBottomLine">From android material design</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="vacio_Hint" />
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="no_internet" translatable="false">No hay internet</string>
    <string name="result" translatable="false">Resultado</string>
    <string name="usuario" translatable="false">Usuario</string>
    <string name="Contrasenia" translatable="false">Contraseña</string>
    <string name="Entrar" translatable="false">Entrar</string>
    <string name="Empresa" translatable="false">Empresa</string>
    <string name="Entorno" translatable="false">Entorno</string>
    <string name="NuevaConfiguracion" translatable="false">Nueva Configuración</string>
    <string name="ValidarEntorno" translatable="false">Validar Entorno</string>
    <string name="EnviarUbicación" translatable="false">Enviar Ubicación (en minutos)</string>
    <string name="VigenciaInformación" translatable="false">Vigencia de la Información (en minutos)</string>
    <string name="GuardarConfiguración" translatable="false">Guardar Configuración</string>
    <string name="ConfiguracionActual" translatable="false">Configuración Actual</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="Clientes">Clientes</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_caja">Caja</string>
    <string name="menu_prestamos">Préstamos</string>
    <string name="menu_catalogos">Catálogos</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_otrasOpciones">Otras Opciones</string>
    <string name="menu_configurar">Configurar</string>
    <string name="menu_salir">Salir</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prestamos_solicitudCredito">Solicitud Crédito</string>
    <string name="prestamos_renovarCredito">Renovar Crédito</string>
    <string name="prestamos_reestructurarCredito">Reestructurar Crédito</string>
    <string name="prestamos_entregarCredito">Entregar Crédito</string>
    <string name="prestamos_cobrarCredito">Cobrar Crédito</string>
    <string name="prestamos_CobroAccesoriosCredito">Cobro de Accesorios Crédito</string>
    <string-array name="Genero_array">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="Genero_array_values">
        <item>M</item>
        <item>F</item>
    </string-array>
    <string name="monto_a_disponer">Monto a Disponer:</string>
    <string name="informaci_n_de_entrega">Información de Entrega</string>
    <string name="informaci_n_del_prestamo">Información del Prestamo</string>
    <string name="folio">Folio:</string>
    <string name="buscar_clientes">Buscar Clientes</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="rfc">RFC:</string>
    <string name="buscar">Buscar</string>
</resources>