<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.logicsystems.appsofom.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.logicsystems.appsofom.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.logicsystems.appsofom.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_prestamo"
        android:name="com.logicsystems.appsofom.fragments.PrestamosFragment"
        android:label="@string/menu_prestamos"
        tools:layout="@layout/fragment_prestamos" />
    <fragment
        android:id="@+id/nav_catalogos"
        android:name="com.logicsystems.appsofom.fragments.CatalogosFragment"
        android:label="@string/menu_catalogos"
        tools:layout="@layout/fragment_catalogos" />
    <fragment
        android:id="@+id/nav_reportes"
        android:name="com.logicsystems.appsofom.fragments.ReporteFragment"
        android:label="Reporte"
        tools:layout="@layout/fragment_reporte" />
</navigation>