<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="25dp"
    android:minHeight="25dp">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/second_toolbar">
        <TextView
            android:id="@+id/txtViewTituloClienteBusqueda"
            android:text="@string/buscar_clientes"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="left"
            android:textColor="#546E7A" />
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="5"
        android:layout_marginTop="15dp">
        <TextView
            android:text="@string/nombres"
            android:textSize="17sp"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginStart="20dp"
            android:id="@+id/txtViewClienteNombres"
            android:textColor="@android:color/holo_blue_dark" />
        <EditText
            android:ems="12"
            android:textSize="17sp"
            android:id="@+id/txtClienteNombres"
            android:layout_gravity="left"
            android:textColor="@android:color/black"
            android:singleLine="true"
            android:layout_columnSpan="4"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingStart="10dp"
            android:background="@drawable/rounded_edittext" />
        <TextView
            android:text="@string/apellidos"
            android:textSize="17sp"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginStart="20dp"
            android:id="@+id/txtViewClienteApellidos"
            android:textColor="@android:color/holo_blue_dark" />
        <EditText
            android:ems="12"
            android:textSize="17sp"
            android:id="@+id/txtClienteApellidos"
            android:layout_gravity="left"
            android:textColor="@android:color/black"
            android:singleLine="true"
            android:layout_columnSpan="4"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingStart="10dp"
            android:background="@drawable/rounded_edittext" />
        <TextView
            android:text="@string/rfc"
            android:textSize="17sp"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginStart="20dp"
            android:id="@+id/txtViewClienteRFC"
            android:textColor="@android:color/holo_blue_dark" />
        <EditText
            android:ems="12"
            android:textSize="17sp"
            android:id="@+id/txtClienteRFC"
            android:layout_gravity="left"
            android:textColor="@android:color/black"
            android:singleLine="true"
            android:layout_columnSpan="4"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingStart="10dp"
            android:background="@drawable/rounded_edittext" />
    </GridLayout>
    <Button
        android:text="@string/buscar"
        android:id="@+id/btnSearch"
        android:height="20dp"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_buttom" />
</LinearLayout>