<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="25dp"
    android:minHeight="25dp">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/second_toolbar">
        <TextView
            android:text="@string/informaci_n_del_prestamo"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="left"
            android:textColor="#546E7A" />
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="5">
        <TextView
            android:id="@+id/txtViewlblFolio"
            android:text="@string/folio"
            android:textSize="17sp"
            android:layout_gravity="left"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/holo_blue_dark" />
        <TextView
            android:id="@+id/txtViewInfoFolio"
            android:text=""
            android:textSize="17dp"
            android:layout_gravity="left"
            android:layout_marginRight="10dp"
            android:textColorHint="@android:color/holo_blue_dark"
            android:layout_columnSpan="4" />
        <TextView
            android:id="@+id/txtViewlblCliente"
            android:text="Cliente:"
            android:textSize="17dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/holo_blue_dark" />
        <TextView
            android:id="@+id/txtViewInfoCliente"
            android:text=""
            android:textSize="17dp"
            android:layout_gravity="left"
            android:layout_marginRight="10dp"
            android:textColorHint="@android:color/holo_blue_dark"
            android:layout_columnSpan="4" />
        <TextView
            android:id="@+id/txtViewlblMonto"
            android:text="Monto:"
            android:textSize="17dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_column="0" />
        <TextView
            android:id="@+id/txtViewInfoMonto"
            android:text=""
            android:textSize="17dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textColorHint="@android:color/holo_blue_dark" />
        <TextView
            android:id="@+id/txtViewlblSaldoPendiente"
            android:text="Saldo Pendiente:"
            android:textSize="17dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_column="0" />
        <TextView
            android:id="@+id/txtViewInfoSaldoPendiente"
            android:text=""
            android:textSize="17dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textColorHint="@android:color/holo_blue_dark" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/second_toolbar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/informaci_n_de_entrega"
            android:textColor="#546E7A"
            android:textSize="18dp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/containerEntregaIndividual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/txtViewlblMontoaDisponer"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/monto_a_disponer"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="17sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/txtMontoaDisponer"
            android:layout_gravity="right"
            android:background="@drawable/rounded_edittext"
            android:ems="8"
            android:inputType="numberDecimal"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textSize="17dp" />
    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listIntegrantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>